h/tests/ui/negate_unsigned.rs
fn main() {
    let meow = h::map!(
        for u8;
        -1 => (),
    );
}
